Prevent misshaped blog summaries on smaller screens.

--- a/css/blog/overview.css
+++ b/css/blog/overview.css
@@ -29,4 +29,14 @@ section.intro p {
   margin: auto;
 }
 
+section.main aside.summary div.summary-content h1.summary-title {
+  font-size: 1.6em;
+}
+
+
+@media screen and (max-width: 700px) {
+  section.main aside.summary {
+    max-width: 400px;
+  }
+}
 
